--- a/appinfo.json
+++ b/appinfo.json
@@ -1,11 +1,11 @@
 {
   "uuid": "133215f0-cf20-4c05-997b-3c9be5a64e5b",
-  "shortName": "Simply.js",
-  "longName": "Simply.js",
-  "companyName": "Meiguro",
+  "shortName": "Markets",
+  "longName": "Markets for Pebble",
+  "companyName": "YS",
   "versionCode": 1,
-  "versionLabel": "0.3.3",
-  "capabilities": [ "configurable" ],
+  "versionLabel": "0.1",
+  "capabilities": [],
   "watchapp": {
     "watchface": false
   },
